policy/argo-namespace-isolation-default-tier.yaml
apiVersion: projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: default.allow-all
spec:
  tier: default
  selector: ''
  namespaceSelector: ''
  serviceAccountSelector: ''
  ingress:
    - action: Allow
      source: {}
      destination: {}
  egress:
    - action: Allow
      source: {}
      destination: {}
  doNotTrack: false
  applyOnForward: false
  preDNAT: false
  types:
    - Ingress
    - Egress
